Upload image to Cloudinary

--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+uploads/products/**.*
+uploads/users/**.*
+
 # End of https://www.toptal.com/developers/gitignore/api/node,macos
